fix header color on mobile screen

--- a/docs/_static/css/custom.css
+++ b/docs/_static/css/custom.css
@@ -167,7 +167,7 @@ a.cmdlink span:hover{
 }
 
 .wy-nav-top {
-  background-color : #ffffff !important;
+  background-color : #ffffff;
 }
 
 .wy-nav-top img {
